--- a/src/components/profile/profile.style.scss
+++ b/src/components/profile/profile.style.scss
@@ -32,7 +32,7 @@ $colorText: #525252;
         flex-direction: column;
         padding-bottom: 20px;
         & > span{
-            @include fons(1rem, $Ubuntu);
+            @include fonsNew(1rem, $Roboto);
             padding: 6px 0px;
         }
         & > span.noSpace{
@@ -40,7 +40,7 @@ $colorText: #525252;
             margin-top: -10px;
         }
         & table span{
-            @include fons(1rem, $Ubuntu);
+            @include fonsNew(1rem, $Roboto);
         }
     }
 }
