--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -202,7 +202,15 @@ body{
 .MuiButtonGroup-groupedContainedHorizontal:not(:last-child){
     border-right: 0px solid #bdbdbd!important;
 }
-.BtnCardMain{   
+.BtnCardMain._COUNT_{
+    padding: 5px 20px!important;
+    background-color: #fff!important;
+    min-width: 35px!important;
+    min-height: 30px!important;
+    @include fonsNew(1rem, $Roboto);
+    font-weight: 400;
+}
+.BtnCardMain:not(._COUNT_){   
     padding: 5px 20px!important;
     background-color: #fff!important;
     min-width: 35px!important;
