--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -98,6 +98,11 @@ body{
     & .copy{
         align-content: flex-end;
         display: grid;
+        & > h1{
+            @include fonsNew(1rem, $Roboto);
+            font-weight: 400;
+            color: #fff!important;
+        }
     }
     & p{
         @include fons(1rem, $Ubuntu);
