--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -327,15 +327,15 @@ body{
         }
         &:hover{
             background-color: #cf9f37;
-            border: 1px solid #cf9f37;
+            border: 1px solid #F9BC23;
         }
         &:target{
             background-color: #cf9f37;
-            border: 1px solid #cf9f37;
+            border: 1px solid #F9BC23;
         }
         &:active{
             background-color: #cf9f37;
-            border: 1px solid #cf9f37;
+            border: 1px solid #F9BC23;
         }
     }
 }
@@ -425,15 +425,15 @@ body{
         }
         &:hover{
             background-color: #cf9f37;
-            border: 2px solid #cf9f37;
+            border: 2px solid #F9BC23;
         }
         &:target{
             background-color: #cf9f37;
-            border: 2px solid #cf9f37;
+            border: 2px solid #F9BC23;
         }
         &:active{
             background-color: #cf9f37;
-            border: 2px solid #cf9f37;
+            border: 2px solid #F9BC23;
         }
     }
     
@@ -464,15 +464,15 @@ body{
             cursor: pointer;
             &:hover{
                 background-color: #cf9f37;
-                border: 1px solid #cf9f37;
+                border: 1px solid #F9BC23;
             }
             &:target{
                 background-color: #cf9f37;
-                border: 1px solid #cf9f37;
+                border: 1px solid #F9BC23;
             }
             &:active{
                 background-color: #cf9f37;
-                border: 1px solid #cf9f37;
+                border: 1px solid #F9BC23;
             }
         }
         & > .plus{
@@ -491,15 +491,15 @@ body{
             cursor: pointer;
             &:hover{
                 background-color: #cf9f37;
-                border: 1px solid #cf9f37;
+                border: 1px solid #F9BC23;
             }
             &:target{
                 background-color: #cf9f37;
-                border: 1px solid #cf9f37;
+                border: 1px solid #F9BC23;
             }
             &:active{
                 background-color: #cf9f37;
-                border: 1px solid #cf9f37;
+                border: 1px solid #F9BC23;
             }
         }
         & > div{
@@ -560,15 +560,15 @@ body{
         }
         & > button:hover{
             background-color: #cf9f37;
-            border: 1px solid #cf9f37;
+            border: 1px solid #F9BC23;
         }
         & > button:target{
             background-color: #cf9f37;
-            border: 1px solid #cf9f37;
+            border: 1px solid #F9BC23;
         }
         & > button:active{
             background-color: #cf9f37;
-            border: 1px solid #cf9f37;
+            border: 1px solid #F9BC23;
         }
     }
 }
