--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -464,15 +464,15 @@ body{
             cursor: pointer;
             &:hover{
                 background-color: #cf9f37;
-                border: 1px solid #F9BC23;
+                border: 1px solid #cf9f37;
             }
             &:target{
                 background-color: #cf9f37;
-                border: 1px solid #F9BC23;
+                border: 1px solid #cf9f37;
             }
             &:active{
                 background-color: #cf9f37;
-                border: 1px solid #F9BC23;
+                border: 1px solid #cf9f37;
             }
         }
         & > .plus{
@@ -491,15 +491,15 @@ body{
             cursor: pointer;
             &:hover{
                 background-color: #cf9f37;
-                border: 1px solid #F9BC23;
+                border: 1px solid #cf9f37;
             }
             &:target{
                 background-color: #cf9f37;
-                border: 1px solid #F9BC23;
+                border: 1px solid #cf9f37;
             }
             &:active{
                 background-color: #cf9f37;
-                border: 1px solid #F9BC23;
+                border: 1px solid #cf9f37;
             }
         }
         & > div{
