--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -304,9 +304,10 @@ body{
     }
 }
 .MiniActionsCartButtonPrize{
+    width: 100%;
     & > div{
-        width: 240px;
-        height: 30px;
+        width: 100%;
+        height: 58px;
         padding: 0; 
         background-color: rgba(143, 222, 15, 0.1);
         border: 1px solid rgb(143, 222, 15);
@@ -318,7 +319,7 @@ body{
         align-items: center;
         justify-content: center;
         & span{
-            @include fonsNew(0.875rem, $Roboto);
+            @include fonsNew(1.08rem, $Roboto);
             font-weight: 500;
             text-transform: initial;
             display: flex;
