--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -710,14 +710,18 @@ body{
                     @include fonsNew(1.25rem, $Roboto);
                     font-weight: 500;
                     color: rgba(27,27,31,0.2)!important;
-                    position: relative;
-                    &:before {
-                        border-bottom: 2px solid $colorMain;
-                        position: absolute;
-                        content: "";
-                        width: 26%;
-                        height: 6%;
-                        right: -5px;
+                    
+                    & > span{
+                        padding: 10px 0px;
+                        position: relative;
+                        &:before {
+                            border-bottom: 2px solid $colorMain;
+                            position: absolute;
+                            content: "";
+                            width: 100%;
+                            height: 6%;
+                            right: -5px;
+                        }
                     }
                 }
             }
