--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -12,3 +12,28 @@ $mainColor: #CC0033;
 .ModalContent_1_2 input:disabled{
     color: #000!important;
 }
+
+.modalLoginStart{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #fff;
+    padding: 4px;
+    border-radius: 40px;
+    
+    & .inputLogin{
+        width: 100%;
+        & > div{
+            border-radius: 40px;
+            padding-left: 10px;
+        }
+        & > label{
+            padding-left: 10px;
+        }
+        & .Mui-focused legend{
+            padding-left: 10px;
+        }
+    }
+}
