--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -1,9 +1,17 @@
 $Ubuntu: 'Ubuntu';
+$Roboto: 'Roboto';
 $Futuris: 'FuturaFuturisC';
 $mainColor: #CC0033;
+$colorText: #525252;
+
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
     font-family: $family !important;
+}
+@mixin fonsNew($size: 1rem, $family: $Roboto) {
+    font-size: $size;
+    font-family: $family!important;
+    color: $colorText;
 }
 
 .MuiMenu-list span{
@@ -20,7 +28,7 @@ $mainColor: #CC0033;
     transform: translate(-50%, -50%);
     width: 400px;
     background-color: #fff;
-    padding: 4px;
+    padding: 24px;
     border-radius: 40px;
     
     & .inputLogin{
@@ -32,8 +40,15 @@ $mainColor: #CC0033;
         & > label{
             padding-left: 10px;
         }
+        & label, span, input{
+            @include fonsNew(1rem, $Roboto);
+            font-weight: 400;
+        }
         & .Mui-focused legend{
             padding-left: 10px;
+        }
+        & fieldset{
+            inset: -3px 0px 0px!important;
         }
     }
 }
