--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -28,11 +28,14 @@ $colorText: #525252;
     transform: translate(-50%, -50%);
     width: 400px;
     background-color: #fff;
-    padding: 24px;
+    padding: 30px 80px;
     border-radius: 40px;
-    
+    & .inputLogin:first-child{
+        margin-bottom: 30px;
+    }
     & .inputLogin{
         width: 100%;
+        height: 60px;
         & > div{
             border-radius: 40px;
             padding-left: 10px;
@@ -50,5 +53,16 @@ $colorText: #525252;
         & fieldset{
             inset: -3px 0px 0px!important;
         }
+
+        
+    }
+
+    & .loginHeader{
+        height: 60px;
+        margin-bottom: 30px;
+    }
+    
+    & .loginSMS{
+        height: 40px;
     }
 }
