--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -39,6 +39,10 @@ $colorText: #525252;
     & .inputLogin{
         width: 100%;
         height: 60px;
+        transform: translate(14px, 19px) scale(1);
+        & input{
+            height: 100%;
+        }
         & > div{
             border-radius: 40px;
             padding-left: 10px;
