--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -51,6 +51,10 @@ $colorText: #525252;
             padding-left: 10px;
             transform: translate(14px, 19px) scale(1);
         }
+        & > label[data-shrink="true"], label[data-shrink=true]{
+            padding-left: 10px;
+            transform: translate(14px, -9px) scale(0.75);
+        }
         & label, span, input{
             @include fonsNew(1rem, $Roboto);
             font-weight: 400;
