--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -33,7 +33,7 @@ $colorText: #525252;
     display: flex;
     flex-direction: column;
     align-items: center;
-    & .inputLogin:first-child{
+    & > .inputLogin:first-child{
         margin-bottom: 30px;
     }
     & .inputLogin{
@@ -52,7 +52,7 @@ $colorText: #525252;
             transform: translate(14px, 19px) scale(1);
         }
         & > label[data-shrink="true"], label[data-shrink=true]{
-            padding-left: 10px;
+            padding-left: 0px;
             transform: translate(14px, -9px) scale(0.75);
         }
         & label, span, input{
