--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -53,7 +53,7 @@ $colorText: #525252;
         }
         & > label[data-shrink="true"], label[data-shrink=true]{
             padding-left: 0px;
-            transform: translate(20px, -9px) scale(0.75);
+            transform: translate(20px, -9px) scale(0.9);
         }
         & label, span, input{
             @include fonsNew(1rem, $Roboto);
@@ -74,7 +74,7 @@ $colorText: #525252;
         margin-bottom: 30px;
         display: flex;
         align-items: flex-end;
-        & .h2{
+        & h2{
             @include fonsNew(2rem, $Roboto);
             font-weight: 900;
         }
