--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -70,6 +70,7 @@ $colorText: #525252;
     }
     
     & .loginHeader{
+        width: 100%;
         height: 60px;
         margin-bottom: 30px;
         display: flex;
@@ -77,6 +78,37 @@ $colorText: #525252;
         & h2{
             @include fonsNew(2rem, $Roboto);
             font-weight: 900;
+        }
+    }
+    & .loginLosePWD{
+        width: 100%;
+        height: 80px;
+        display: flex;
+        align-items: flex-end;
+        & span{
+            @include fonsNew(0.825rem, $Roboto);
+            font-weight: 300;
+        }
+    }
+    .loginLogin{
+        width: 50%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #CC0033;
+        border-bottom: 30px;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 700;
+        }
+    }
+    .loginCreate{
+        width: 50%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #CC0033;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 700;
         }
     }
     
