--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -70,7 +70,6 @@ $colorText: #525252;
     }
     
     & .loginHeader{
-        width: 100%;
         height: 60px;
         margin-bottom: 30px;
         display: flex;
@@ -81,10 +80,9 @@ $colorText: #525252;
         }
     }
     & .loginLosePWD{
-        width: 100%;
         height: 80px;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         & span{
             @include fonsNew(0.825rem, $Roboto);
             font-weight: 300;
@@ -95,7 +93,10 @@ $colorText: #525252;
         height: 60px;
         border-radius: 120px;
         background-color: #CC0033;
-        border-bottom: 30px;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         & span{
             @include fonsNew(1.25rem, $Roboto);
             font-weight: 700;
@@ -106,6 +107,9 @@ $colorText: #525252;
         height: 60px;
         border-radius: 120px;
         background-color: #CC0033;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         & span{
             @include fonsNew(1.25rem, $Roboto);
             font-weight: 700;
@@ -114,5 +118,12 @@ $colorText: #525252;
     
     & .loginSMS{
         height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & span{
+            @include fonsNew(0.825rem, $Roboto);
+            font-weight: 300;
+        }
     }
 }
