--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -41,6 +41,9 @@ $colorText: #525252;
         height: 60px;
         & input{
             height: 100%;
+            padding: 0;
+            width: 100%;
+            padding-left: 20px;
         }
         & > div{
             border-radius: 40px;
