--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -21,6 +21,73 @@ $colorText: #525252;
     color: #000!important;
 }
 
+.modalLoginCreate{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #fff;
+    padding: 30px 80px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    & .inputLogin{
+        width: 100%;
+        height: 60px;
+        & input{
+            height: 100%;
+            padding: 0;
+            width: 100%;
+            padding-left: 20px;
+        }
+        & > div{
+            border-radius: 40px;
+            height: 100%;
+        }
+        & > label{
+            padding-left: 10px;
+            transform: translate(14px, 19px) scale(1);
+        }
+        & > label[data-shrink="true"], label[data-shrink=true]{
+            padding-left: 0px;
+            transform: translate(20px, -9px) scale(0.9);
+        }
+        & label, span, input{
+            @include fonsNew(1rem, $Roboto);
+            font-weight: 400;
+        }
+        & .Mui-focused legend{
+            padding-left: 0px;
+        }
+        & fieldset{
+            inset: -3px 0px 0px!important;
+        }
+
+        
+    }
+    & .loginIMG{
+        height: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    & .loginHeader{
+        height: 60px;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: flex-end;
+        & h2{
+            @include fonsNew(2rem, $Roboto);
+            font-weight: 900;
+        }
+    }
+}
 .modalLoginStart{
     position: absolute;
     top: 50%;
@@ -114,6 +181,12 @@ $colorText: #525252;
             @include fonsNew(1.25rem, $Roboto);
             font-weight: 500;
         }
+        & :hover{
+            background-color: #e1b242;
+        }
+        & :target{
+            background-color: #cf9f37;
+        }
     }
     .loginCreate{
         width: 75%;
@@ -128,6 +201,12 @@ $colorText: #525252;
         & span{
             @include fonsNew(1.25rem, $Roboto);
             font-weight: 500;
+        }
+        & :hover{
+            background-color: #fdf8ed;
+        }
+        & :target{
+            background-color: #f9ebce;
         }
     }
     
