--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -87,6 +87,50 @@ $colorText: #525252;
             font-weight: 900;
         }
     }
+    .loginLogin{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #F9BC23;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+        }
+        &:hover{
+            background-color: #e1b242;
+        }
+        &:target{
+            background-color: #cf9f37;
+        }
+    }
+    .loginCreate{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #fff;
+        border: 1px solid #F9BC23;
+        cursor: pointer;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        &:hover{
+            background-color: #fdf8ed;
+        }
+        &:target{
+            background-color: #f9ebce;
+        }
+    }
 }
 .modalLoginStart{
     position: absolute;
@@ -181,10 +225,10 @@ $colorText: #525252;
             @include fonsNew(1.25rem, $Roboto);
             font-weight: 500;
         }
-        & :hover{
+        &:hover{
             background-color: #e1b242;
         }
-        & :target{
+        &:target{
             background-color: #cf9f37;
         }
     }
@@ -194,18 +238,20 @@ $colorText: #525252;
         border-radius: 120px;
         background-color: #fff;
         border: 1px solid #F9BC23;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         cursor: pointer;
         & span{
             @include fonsNew(1.25rem, $Roboto);
             font-weight: 500;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-        & :hover{
+        &:hover{
             background-color: #fdf8ed;
         }
-        & :target{
+        &:target{
             background-color: #f9ebce;
         }
     }
