--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -29,6 +29,7 @@ $colorText: #525252;
     width: 400px;
     background-color: #fff;
     padding: 30px 80px;
+    padding-bottom: 70px;
     border-radius: 40px;
     display: flex;
     flex-direction: column;
@@ -85,6 +86,15 @@ $colorText: #525252;
         & h2{
             @include fonsNew(2rem, $Roboto);
             font-weight: 900;
+        }
+    }
+    & .loginErrText{
+        height: 80px;
+        display: flex;
+        align-items: center;
+        & span{
+            @include fonsNew(0.825rem, $Roboto);
+            font-weight: 300;
         }
     }
     .loginLogin{
