--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -21,23 +21,72 @@ $colorText: #525252;
     color: #000!important;
 }
 
-.loginAutCode input {
-    width: 90px;
-    height: 90px;
-    padding: 0;
-    text-align: center;
-    margin-right: 12px;
-    text-transform: uppercase;
-    @include fonsNew(2rem, $Roboto);
-    font-weight: 400;
-    border: 1px solid #d6d6d6;
-    border-radius: 4px;
-    background: #fff;
-    background-clip: padding-box;
-    &:focus {
-        appearance: none;
-        outline: 0;
-        box-shadow: 0 0 0 3px rgb(131, 192, 253 / 50%);
+
+.modalLoginSMSCode{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #fff;
+    padding: 30px 80px;
+    padding-bottom: 70px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    & .loginIMG{
+        height: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    & .loginHeader{
+        height: 60px;
+        display: flex;
+        align-items: flex-end;
+        & h2{
+            @include fonsNew(2rem, $Roboto);
+            font-weight: 900;
+        }
+    }
+    & .loginSubHeader{
+        height: 105px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        & span{
+            @include fonsNew(2rem, $Roboto);
+            font-weight: 900;
+        }
+    }
+    & .loginAutCode{
+        & > div{
+            display: flex;
+            flex-direction: row;
+            & input {
+                width: 88px;
+                height: 88px;
+                padding: 0;
+                text-align: center;
+                margin-right: 12px;
+                text-transform: uppercase;
+                @include fonsNew(2rem, $Roboto);
+                font-weight: 400;
+                border: 1px solid #fff;
+                border-radius: 20px;
+                background: #fff;
+                background-clip: padding-box;
+                &:focus {
+                    appearance: none;
+                    outline: 0;
+                }
+            }
+        }
     }
 }
 
