--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -28,7 +28,7 @@ $colorText: #525252;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
-    background-color: #fff;
+    background-color: #F9BC23;
     padding: 30px 80px;
     padding-bottom: 70px;
     border-radius: 40px;
@@ -60,8 +60,9 @@ $colorText: #525252;
         flex-direction: column;
         align-items: flex-end;
         & span{
-            @include fonsNew(2rem, $Roboto);
-            font-weight: 900;
+            @include fonsNew(1.5rem, $Roboto);
+            font-weight: 400;
+            text-align: center;
         }
     }
     & .loginAutCode{
