--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -41,8 +41,8 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: 100%;
-            height: 100%;
+            width: 90px;
+            height: auto;
         }
     }
     & .loginHeader{
@@ -58,7 +58,6 @@ $colorText: #525252;
         height: 105px;
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
         & span{
             @include fonsNew(1.5rem, $Roboto);
             font-weight: 400;
@@ -87,6 +86,58 @@ $colorText: #525252;
                     outline: 0;
                 }
             }
+        }
+    }
+    & .loginTimer{
+        height: 65px;
+        & span{
+            @include fonsNew(1.5rem, $Roboto);
+            font-weight: 200;
+            text-align: center;
+        }
+    }
+    & .loginSend{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #684f00;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+            color: #fff;
+        }
+        &:hover{
+            background-color: #453306;
+        }
+        &:target, :focus{
+            background-color: #2E2103;
+        }
+    }
+    & .loginPrev{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #F9BC23;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+            color: #fff;
+        }
+        &:hover{
+            background-color: #FFCF56;
+        }
+        &:target, :focus{
+            background-color: #FFD97A;
         }
     }
 }
