--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -90,6 +90,9 @@ $colorText: #525252;
     }
     & .loginTimer{
         height: 65px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         & span{
             @include fonsNew(1.5rem, $Roboto);
             font-weight: 200;
@@ -120,9 +123,10 @@ $colorText: #525252;
     }
     & .loginPrev{
         width: 75%;
-        height: 60px;
+        height: 58px;
         border-radius: 120px;
         background-color: #F9BC23;
+        border: 1px solid #fff;
         margin-bottom: 30px;
         display: flex;
         align-items: center;
