--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -29,8 +29,10 @@ $colorText: #525252;
     transform: translate(-50%, -50%);
     width: 400px;
     background-color: #F9BC23;
-    padding: 30px 80px;
-    padding-bottom: 70px;
+    padding-left: 55px;
+    padding-right: 55px;
+    padding-bottom: 50px;
+    padding-top: 30px;
     border-radius: 40px;
     display: flex;
     flex-direction: column;
@@ -125,14 +127,13 @@ $colorText: #525252;
     }
     & .loginPrev{
         width: 100%;
-        height: 60px;
-        margin-bottom: 30px;
+        height: 30px;
         display: flex;
         align-items: center;
         justify-content: center;
         & span{
             @include fonsNew(1.25rem, $Roboto);
-            font-weight: 500;
+            font-weight: 300;
             cursor: pointer;
         }
     }
