--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -21,7 +21,107 @@ $colorText: #525252;
     color: #000!important;
 }
 
-
+.modalLoginFinish{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #fff;
+    padding: 30px 80px;
+    padding-bottom: 70px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    & .loginIMG{
+        height: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    & .loginHeader{
+        height: 60px;
+        margin-bottom: 50px;
+        display: flex;
+        align-items: flex-end;
+        & h2{
+            @include fonsNew(2rem, $Roboto);
+            font-weight: 900;
+        }
+    }
+    & .loginSubHeader1{
+        height: 80px;
+        margin-bottom: 30px;
+        text-align: center;
+        & span{
+            @include fonsNew(1.2rem, $Roboto);
+            font-weight: 500;
+        }
+    }
+    & .loginSubHeader2{
+        height: 60px;
+        margin-bottom: 40px;
+        text-align: center;
+        & span{
+            @include fonsNew(1rem, $Roboto);
+            font-weight: 400;
+        }
+        & a{
+            color: $colorText!important;
+        }
+    }
+    & .loginLogin{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #F9BC23;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        text-decoration: none;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+        }
+        &:hover{
+            background-color: #e1b242;
+        }
+        &:target{
+            background-color: #cf9f37;
+        }
+    }
+    & .loginCreate{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #fff;
+        border: 1px solid #F9BC23;
+        cursor: pointer;
+        text-decoration: none;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        &:hover{
+            background-color: #fdf8ed;
+        }
+        &:target{
+            background-color: #f9ebce;
+        }
+    }
+}
 .modalLoginSMSCode{
     position: absolute;
     top: 50%;
@@ -66,6 +166,31 @@ $colorText: #525252;
             text-align: center;
         }
     }
+    & .loginAutCodeOther{
+        margin-bottom: 30px;
+        & > div{
+            display: flex;
+            flex-direction: row;
+            & input {
+                width: 88px;
+                height: 88px;
+                padding: 0;
+                text-align: center;
+                margin-right: 12px;
+                text-transform: uppercase;
+                @include fonsNew(2rem, $Roboto);
+                font-weight: 400;
+                border: 1px solid #fff;
+                border-radius: 20px;
+                background: #fff;
+                background-clip: padding-box;
+                &:focus {
+                    appearance: none;
+                    outline: 0;
+                }
+            }
+        }
+    }
     & .loginAutCode{
         margin-bottom: 40px;
         & > div{
@@ -103,12 +228,22 @@ $colorText: #525252;
             text-align: center;
         }
     }
-    & .loginSend{
+    & .loginSend.disabled{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #a17300;
+        margin-bottom: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    & .loginSend:not(.disabled){
         width: 75%;
         height: 60px;
         border-radius: 120px;
         background-color: #684f00;
-        margin-bottom: 25px;
+        margin-bottom: 40px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -137,8 +272,149 @@ $colorText: #525252;
             cursor: pointer;
         }
     }
+    & .loginTimerSend{
+        width: 75%;
+        height: 58px;
+        border-radius: 120px;
+        background-color: #F9BC23;
+        border: 1px solid #fff;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+            color: #fff;
+        }
+        &:hover{
+            background-color: #e1b242;
+        }
+        &:target, :focus{
+            background-color: #cf9f37;
+        }
+    }
 }
-
+.modalLoginCreateNew{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #F9BC23;
+    width: 400px;
+    padding: 30px 80px;
+    padding-bottom: 70px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    & .loginIMG{
+        height: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    & .loginHeader{
+        height: 60px;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: flex-end;
+        & h2{
+            @include fonsNew(2rem, $Roboto);
+            font-weight: 900;
+        }
+    }
+    & .inputLogin{
+        width: 100%;
+        height: 60px;
+        & .Mui-focused .MuiOutlinedInput-notchedOutline{
+            border-color: transparent!important;
+        }
+        & input{
+            height: 100%;
+            padding: 0;
+            width: 100%;
+            padding-left: 20px;
+            background-color: #fff;
+            border-radius: 40px;
+            letter-spacing: 1px;
+        }
+        & fieldset{
+            border-color: transparent!important;
+            border-width: 0px;
+        }
+        & > div{
+            border-radius: 40px;
+            height: 100%;
+        }
+        & label, span, input{
+            @include fonsNew(1.5rem, $Roboto);
+            font-weight: 400;
+        }
+    }
+    & .loginSubHeader{
+        height: 80px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        & span{
+            @include fonsNew(0.75rem, $Roboto);
+            font-weight: 400;
+            text-align: center;
+        }
+    }
+    & .loginLogin{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #684a00;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+            color: #fff;
+        }
+        &:hover{
+            background-color: #453306;
+        }
+        &:target{
+            background-color: #2e2103;
+        }
+    }
+    & .loginCreate{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #F9BC23;
+        border: 1px solid #fff;
+        cursor: pointer;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        &:hover{
+            background-color: #ffcf56;
+        }
+        &:target{
+            background-color: #ffd97a;
+        }
+    }
+}
 .modalLoginCreate{
     position: absolute;
     top: 50%;
@@ -155,36 +431,29 @@ $colorText: #525252;
     & .inputLogin{
         width: 100%;
         height: 60px;
+        & .Mui-focused .MuiOutlinedInput-notchedOutline{
+            border-width: 0px!important;
+        }
+        & fieldset{
+            border-width: 0px!important;
+        }
         & input{
             height: 100%;
             padding: 0;
             width: 100%;
             padding-left: 20px;
+            letter-spacing: 1px;
+            border-radius: 40px;
+            border: 1px solid #BDBCBC!important;
         }
         & > div{
             border-radius: 40px;
             height: 100%;
         }
-        & > label{
-            padding-left: 10px;
-            transform: translate(14px, 19px) scale(1);
-        }
-        & > label[data-shrink="true"], label[data-shrink=true]{
-            padding-left: 0px;
-            transform: translate(20px, -9px) scale(0.9);
-        }
         & label, span, input{
-            @include fonsNew(1rem, $Roboto);
+            @include fonsNew(1.5rem, $Roboto);
             font-weight: 400;
         }
-        & .Mui-focused legend{
-            padding-left: 0px;
-        }
-        & fieldset{
-            inset: -3px 0px 0px!important;
-        }
-
-        
     }
     & .loginIMG{
         height: 90px;
@@ -215,7 +484,7 @@ $colorText: #525252;
             font-weight: 300;
         }
     }
-    .loginLogin{
+    & .loginLogin{
         width: 75%;
         height: 60px;
         border-radius: 120px;
@@ -236,7 +505,7 @@ $colorText: #525252;
             background-color: #cf9f37;
         }
     }
-    .loginCreate{
+    & .loginCreate{
         width: 75%;
         height: 60px;
         border-radius: 120px;
@@ -278,36 +547,29 @@ $colorText: #525252;
     & .inputLogin{
         width: 100%;
         height: 60px;
+        & .Mui-focused .MuiOutlinedInput-notchedOutline{
+            border-width: 0px!important;
+        }
+        & fieldset{
+            border-width: 0px!important;
+        }
         & input{
             height: 100%;
             padding: 0;
             width: 100%;
             padding-left: 20px;
+            letter-spacing: 1px;
+            border-radius: 40px;
+            border: 1px solid #BDBCBC!important;
         }
         & > div{
             border-radius: 40px;
             height: 100%;
         }
-        & > label{
-            padding-left: 10px;
-            transform: translate(14px, 19px) scale(1);
-        }
-        & > label[data-shrink="true"], label[data-shrink=true]{
-            padding-left: 0px;
-            transform: translate(20px, -9px) scale(0.9);
-        }
         & label, span, input{
-            @include fonsNew(1rem, $Roboto);
+            @include fonsNew(1.5rem, $Roboto);
             font-weight: 400;
         }
-        & .Mui-focused legend{
-            padding-left: 0px;
-        }
-        & fieldset{
-            inset: -3px 0px 0px!important;
-        }
-
-        
     }
     & .loginIMG{
         height: 90px;
@@ -339,7 +601,7 @@ $colorText: #525252;
             cursor: pointer;
         }
     }
-    .loginLogin{
+    & .loginLogin{
         width: 75%;
         height: 60px;
         border-radius: 120px;
@@ -360,7 +622,7 @@ $colorText: #525252;
             background-color: #cf9f37;
         }
     }
-    .loginCreate{
+    & .loginCreate{
         width: 75%;
         height: 60px;
         border-radius: 120px;
@@ -383,7 +645,6 @@ $colorText: #525252;
             background-color: #f9ebce;
         }
     }
-    
     & .loginSMS{
         height: 40px;
         display: flex;
