--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -341,8 +341,9 @@ body{
     }
 }
 .MobileActionsCartButtonStart{
+    width: 100%;
     & > button{
-        width: 80px;
+        width: 100%;
         height: 30px;
         padding: 0; 
         background-color: #fff;
@@ -361,18 +362,6 @@ body{
             display: flex;
             align-items: center;
             justify-content: center;
-        }
-        &:hover{
-            background-color: #cf9f37;
-            border: 1px solid #F9BC23;
-        }
-        &:target{
-            background-color: #cf9f37;
-            border: 1px solid #F9BC23;
-        }
-        &:active{
-            background-color: #cf9f37;
-            border: 1px solid #F9BC23;
         }
     }
 }
@@ -755,8 +744,26 @@ body{
         & .CellButtonPrize{
             width: 43.1%;
         }
-        & .CellPrice{
+        & .CellPrice, .CellPrice2{
             width: 17.2%;
+        }
+        & .CellPrice2{
+            & > div:first-child{
+                width: 100%;
+                & > div{
+                    position: relative;
+                    width: fit-content;
+                    color: rgba(27, 27, 31, 0.2) !important;
+                    &::before{
+                        border-bottom: 2px solid #CC0033;
+                        position: absolute;
+                        content: "";
+                        width: 120%;
+                        height: 50%;
+                        left: -10%;
+                    }
+                }
+            }
         }
     }
     & .SpacePromo{
