--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -34,6 +34,10 @@ $colorText: #525252;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (max-width: 800px){
+        width: calc(100% - 40px);
+        padding: 10px 20px;
+    }
     & .loginIMG{
         height: 90px;
         display: flex;
@@ -137,6 +141,10 @@ $colorText: #525252;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (max-width: 800px){
+        width: calc(100% - 40px);
+        padding: 10px 20px;
+    }
     & .loginIMG{
         height: 90px;
         display: flex;
@@ -309,6 +317,10 @@ $colorText: #525252;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (max-width: 800px){
+        width: calc(100% - 40px);
+        padding: 10px 20px;
+    }
     & .loginIMG{
         height: 90px;
         display: flex;
@@ -428,6 +440,10 @@ $colorText: #525252;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (max-width: 800px){
+        width: calc(100% - 40px);
+        padding: 10px 20px;
+    }
     & .inputLogin{
         width: 100%;
         height: 60px;
@@ -541,6 +557,10 @@ $colorText: #525252;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (max-width: 800px){
+        width: calc(100% - 40px);
+        padding: 10px 20px;
+    }
     & .inputLogin:first-child{
         margin-bottom: 30px;
     }
