--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -77,7 +77,7 @@ $colorMain: #CC0033;
     padding-right: 10%;*/
     & h1{
         @include fons(1.625rem, $Roboto);
-        font-weight: 900;
+        font-weight: bold;
         color: #525252;
         line-height: 1;
         margin-top: 5px;
