--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -44,7 +44,7 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: 100%;
+            width: fit-content;
             height: 100%;
         }
     }
@@ -55,7 +55,7 @@ $colorText: #525252;
         align-items: flex-end;
         & h2{
             @include fonsNew(2rem, $Roboto);
-            font-weight: 900;
+            font-weight: 500;
         }
     }
     & .loginSubHeader1{
@@ -125,6 +125,20 @@ $colorText: #525252;
             background-color: #f9ebce;
         }
     }
+    & .loginErr{
+        height: 40px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        & > span{
+            @include fonsNew(0.9rem, $Roboto);
+            font-weight: 300;
+            color: $mainColor
+        }
+    }
 }
 .modalLoginSMSCode{
     position: absolute;
@@ -151,7 +165,7 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: 90px;
+            width: fit-content;
             height: auto;
         }
     }
@@ -161,7 +175,7 @@ $colorText: #525252;
         align-items: flex-end;
         & h2{
             @include fonsNew(2rem, $Roboto);
-            font-weight: 900;
+            font-weight: 500;
         }
     }
     & .loginSubHeader{
@@ -200,7 +214,6 @@ $colorText: #525252;
         }
     }
     & .loginAutCode{
-        margin-bottom: 40px;
         & > div{
             display: flex;
             flex-direction: row;
@@ -225,7 +238,7 @@ $colorText: #525252;
         }
     }
     & .loginTimer{
-        height: 40px;
+        height: 50px;
         margin-bottom: 40px;
         display: flex;
         justify-content: center;
@@ -303,6 +316,20 @@ $colorText: #525252;
             background-color: #cf9f37;
         }
     }
+    & .loginErr{
+        height: 40px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        & > span{
+            @include fonsNew(0.9rem, $Roboto);
+            font-weight: 300;
+            color: $mainColor
+        }
+    }
 }
 .modalLoginCreateNew{
     position: absolute;
@@ -327,7 +354,7 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: 100%;
+            width: fit-content;
             height: 100%;
         }
     }
@@ -338,7 +365,7 @@ $colorText: #525252;
         align-items: flex-end;
         & h2{
             @include fonsNew(2rem, $Roboto);
-            font-weight: 900;
+            font-weight: 500;
         }
     }
     & .inputLogin{
@@ -426,6 +453,144 @@ $colorText: #525252;
             background-color: #ffd97a;
         }
     }
+    & .loginErr{
+        height: 40px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        & > span{
+            @include fonsNew(0.9rem, $Roboto);
+            font-weight: 300;
+            color: $mainColor
+        }
+    }
+}
+.modalLoginReset{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #fff;
+    padding: 30px 80px;
+    padding-bottom: 70px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media (max-width: 800px){
+        width: calc(100% - 40px);
+        padding: 10px 20px;
+    }
+    & .inputLogin{
+        width: 100%;
+        height: 60px;
+        & .Mui-focused .MuiOutlinedInput-notchedOutline{
+            border-width: 0px!important;
+        }
+        & fieldset{
+            border-width: 0px!important;
+        }
+        & input{
+            height: 100%;
+            padding: 0;
+            width: 100%;
+            padding-left: 20px;
+            letter-spacing: 1px;
+            border-radius: 40px;
+            border: 1px solid #BDBCBC!important;
+        }
+        & > div{
+            border-radius: 40px;
+            height: 100%;
+        }
+        & label, span, input{
+            @include fonsNew(1.5rem, $Roboto);
+            font-weight: 400;
+        }
+    }
+    & .loginIMG{
+        height: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > img{
+            width: fit-content;
+            height: 100%;
+        }
+    }
+    & .loginHeader{
+        height: 60px;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: flex-end;
+        & h2{
+            @include fonsNew(2rem, $Roboto);
+            font-weight: 500;
+        }
+    }
+    & .loginLogin{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #F9BC23;
+        margin-bottom: 30px;
+        margin-top: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+        }
+        &:hover{
+            background-color: #e1b242;
+        }
+        &:target{
+            background-color: #cf9f37;
+        }
+    }
+    & .loginCreate{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #fff;
+        border: 1px solid #F9BC23;
+        cursor: pointer;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        &:hover{
+            background-color: #fdf8ed;
+        }
+        &:target{
+            background-color: #f9ebce;
+        }
+    }
+    & .loginErr{
+        height: 40px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        & > span{
+            @include fonsNew(0.9rem, $Roboto);
+            font-weight: 300;
+            color: $mainColor
+        }
+    }
 }
 .modalLoginCreate{
     position: absolute;
@@ -477,7 +642,7 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: 100%;
+            width: fit-content;
             height: 100%;
         }
     }
@@ -488,16 +653,7 @@ $colorText: #525252;
         align-items: flex-end;
         & h2{
             @include fonsNew(2rem, $Roboto);
-            font-weight: 900;
-        }
-    }
-    & .loginErrText{
-        height: 80px;
-        display: flex;
-        align-items: center;
-        & span{
-            @include fonsNew(0.825rem, $Roboto);
-            font-weight: 300;
+            font-weight: 500;
         }
     }
     & .loginLogin{
@@ -542,6 +698,20 @@ $colorText: #525252;
         }
         &:target{
             background-color: #f9ebce;
+        }
+    }
+    & .loginErr{
+        height: 40px;
+        margin-top: 10px;
+        margin-bottom: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        & > span{
+            @include fonsNew(0.9rem, $Roboto);
+            font-weight: 300;
+            color: $mainColor
         }
     }
 }
@@ -597,7 +767,7 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: 100%;
+            width: fit-content;
             height: 100%;
         }
     }
@@ -608,7 +778,7 @@ $colorText: #525252;
         align-items: flex-end;
         & h2{
             @include fonsNew(2rem, $Roboto);
-            font-weight: 900;
+            font-weight: 500;
         }
     }
     & .loginLosePWD{
@@ -674,6 +844,20 @@ $colorText: #525252;
             @include fonsNew(0.825rem, $Roboto);
             font-weight: 300;
             cursor: pointer;
+        }
+    }
+    & .loginErr{
+        height: 40px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        & > span{
+            @include fonsNew(0.9rem, $Roboto);
+            font-weight: 300;
+            color: $mainColor
         }
     }
 }
